hphp/hack/test/typecheck/global_const14.php.exp
File "global_const14.php", line 3, characters 11-16:
Invalid expression in constant initializer (Parsing[1002])
