hphp/hack/test/typecheck/global_const14.php
<?hh // partial

const X = new A();
